--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/nuke.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <link
@@ -15,12 +14,12 @@
             rel="stylesheet"
         />
 
-        <title>Cant Relate.JP</title>
+        <title>Dazzle Crew</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
-        <script src="https://www.paypal.com/sdk/js?client-id=ASaKfS8_j63aVwAZLaPp7cbx-dPnAKkgUtSmH3oNG4mQ00KSlMYMykkyHa1_x2VuMWFVuJWWhmKGEso3"></script>
+        <script src="https://www.paypal.com/sdk/js?client-id=AcRszoHECIBe5vuVpdG-56Kc1oQ84F3lfbJKCCtX6l2CFR1jVn-_MAXLgt9SiRYpg6-LTwtYhHAsKWpo"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     </body>
